--- a/syllabus.html
+++ b/syllabus.html
@@ -44,20 +44,20 @@
   <tbody>
   <tr>
     <td>1</td>
-    <td align="left">Mon<br>Jun 24</td>
+    <td align="left">Mon<br>Jun 23</td>
     <td align="center">
       Introduction and Background <br>Supervised vs Unsupervised learning (<a href="assets/slides/lec1.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 1-2<br>ESL Ch 1-2</td>
-    <td align="center"><a href="assets/hw/hw0.pdf">HW 0</a> (No due date) <br> <a href="assets/hw/hw1.pdf">HW 1 (Due Jul 5)</a>
+    <td align="center"><a href="assets/hw/hw0.pdf">HW 0</a> (No due date) <br> <a href="assets/hw/hw1.pdf">HW 1 (Due Jul 3)</a>
     </td>
   </tr>
 
   <tr>
     <td>2</td>
-    <td align="left">Wed<br>Jun 26</td>
+    <td align="left">Wed<br>Jun 25</td>
     <td style="text-align:center; vertical-align:middle;">
-      Classification & Clustering (<a href="assets/slides/lec2.pdf">slides</a>)
+      Classification & Clustering (slides)
     </td>
     <td align="center">ISL Ch 2.2.3, 12.4 <br>ESL Ch 6.6.3</td>
     <td align="center"></td>
@@ -65,9 +65,9 @@
 
   <tr>
     <td align="left">Section</td>
-    <td align="left">Fri<br>Jun 28</td>
+    <td align="left">Fri<br>Jun 27</td>
     <td style="text-align:center; vertical-align:middle;">
-      Probability, Statistics, and Linear Algebra review (<a href="assets/slides/sec1.pdf">slides</a>)
+      Probability, Statistics, and Linear Algebra review (slides)
     </td>
     <td align="center"></td>
     <td align="center"></td>
@@ -75,9 +75,9 @@
 
   <tr>
     <td>3</td>
-    <td>Mon<br>Jul 1</td>
+    <td>Mon<br>Jun 30</td>
     <td align="center">
-      Linear Regression (<a href="assets/slides/lec3.pdf">slides</a>)
+      Linear Regression (slides)
     </td>
     <td align="center">ISL Ch 3<br>ESL Ch 3</td>
     <td align="center"></td>
@@ -85,9 +85,9 @@
 
   <tr>
     <td>4</td>
-    <td>Wed<br>Jul 3</td>
+    <td>Wed<br>Jul 2</td>
     <td align="center">
-      Finish Linear Regression & Classification (<a href="assets/slides/lec4.pdf">slides</a>)
+      Finish Linear Regression & Classification (slides)
     </td>
     <td align="center">ISL Ch 3-4<br>ESL Ch 3</td>
     <td align="center"></td>
@@ -95,19 +95,19 @@
 
   <tr>
     <td align="left">Section</td>
-    <td align="left">Fri<br>Jul 5</td>
+    <td align="left">Fri<br>Jul 4</td>
     <td style="text-align:center; vertical-align:middle;">
       No class
     </td>
     <td align="center"></td>
-    <td align="center">HW 1 due <b>@ 4:30PM</b><br><a href="assets/hw/hw2.pdf">HW 2 (Due Jul 15)</a></td>
+    <td align="center">HW 1 due <b>@ 4:30PM</b><br>HW 2 (Due Jul 15)</td>
   </tr>
 
   <tr>
     <td>5</td>
-    <td align="left">Mon<br>Jul 8</td>
+    <td align="left">Mon<br>Jul 7</td>
     <td align="center">
-      Evaluation and Uncertainty (<a href="assets/slides/lec5.pdf">slides</a>)
+      Evaluation and Uncertainty (slides)
     </td>
     <td align="center">
       ISL Ch 5<br>ESL Ch 7, 8.8
@@ -118,9 +118,9 @@
 
   <tr>
     <td>6</td>
-    <td>Wed<br>Jul 10</td>
+    <td>Wed<br>Jul 9</td>
     <td align="center">
-      Model Selection & Regularization (<a href="assets/slides/lec6.pdf">slides</a>)
+      Model Selection & Regularization (slides)
     </td>
     <td align="center">ISL Ch 6<br>ESL Ch 18</td>
     <td align="center">
@@ -129,9 +129,9 @@
 
   <tr>
     <td align="left">Section</td>
-    <td align="left">Fri<br>Jul 12</td>
+    <td align="left">Fri<br>Jul 11</td>
     <td style="text-align:center; vertical-align:middle;">
-      Midterm review (<a href="assets/slides/sec2.pdf">slides</a>)
+      Midterm review (slides)
     </td>
     <td align="center"></td>
     <td align="center"></b></td>
@@ -139,9 +139,9 @@
 
   <tr>
     <td>7</td>
-    <td>Mon<br>Jul 15</td>
+    <td>Mon<br>Jul 14</td>
     <td align="center">
-      Beyond linearity (<a href="assets/slides/lec7.pdf">slides</a>)
+      Beyond linearity (slides)
     </td>
     <td align="center">ISL Ch 6.4-7<br>ESL Ch 5</td>
     <td align="center">HW 2 due <b>@ 4:30PM</b></td>
@@ -149,7 +149,7 @@
 
   <tr style="text-align:center; vertical-align:middle;background-color:#FFF2F2">
     <td></td>
-    <td>Wed<br>Jul 17</td>
+    <td>Wed<br>Jul 16</td>
     <td style="text-align:center; vertical-align:middle;">
       <b>MIDTERM</b> (practice exam)<br>
       <b>Time</b>: 4:30 PM to 5:50 PM - <b>Location</b>: Packard 101.
@@ -160,19 +160,19 @@
 
   <tr>
     <td align="left">Section</td>
-    <td align="left">Fri<br>Jul 19</td>
+    <td align="left">Fri<br>Jul 18</td>
     <td align="center">
       No class
     </td>
     <td align="center"></td>
-    <td align="center"><a href="assets/hw/hw3.pdf">HW 3 (Due Jul 29)</a></td>
+    <td align="center">HW 3 (Due Jul 29)</td>
   </tr>
 
   <tr>
     <td>8</td>
-    <td>Mon<br>Jul 22</td>
+    <td>Mon<br>Jul 21</td>
     <td align="center">
-      Support Vector Machines (<a href="assets/slides/lec8.pdf">slides</a>)
+      Support Vector Machines (slides)
     </td>
     <td align="center">ISL Ch 9<br>ESL Ch 12.1-12.3</td>
     <td align="center"></td>
@@ -180,9 +180,9 @@
 
   <tr>
     <td>9</td>
-    <td>Wed<br>Jul 24</td>
+    <td>Wed<br>Jul 23</td>
     <td align="center">
-      Decision Trees & Random Forests (<a href="assets/slides/lec9.pdf">slides</a>)
+      Decision Trees & Random Forests (slides)
     </td>
     <td align="center">ISL Ch 8<br>ESL Ch 9.2,15</td>
     <td align="center"></td>
@@ -190,7 +190,7 @@
 
   <tr>
     <td>Section</td>
-    <td>Fri<br>Jul 26</td>
+    <td>Fri<br>Jul 25</td>
     <td align="center">
       No class
     </td>
@@ -200,19 +200,19 @@
 
   <tr>
     <td>10</td>
-    <td>Mon<br>Jul 29</td>
+    <td>Mon<br>Jul 28</td>
     <td align="center">
-      Boosting (<a href="assets/slides/lec10.pdf">slides</a>)
+      Boosting (slides)
     </td>
     <td align="center">ISL Ch 8.2<br>ESL Ch 10</td>
-    <td align="center">HW 3 due <b>@ 4:30PM</b><br><a href="assets/hw/hw4.pdf">HW 4 (Due Aug 7)</a></td>
+    <td align="center">HW 3 due <b>@ 4:30PM</b><br>HW 4 (Due Aug 7)</td>
   </tr>
 
   <tr>
     <td>11</td>
-    <td>Wed<br>July 31</td>
+    <td>Wed<br>July 30</td>
     <td align="center">
-      Neural Networks (<a href="assets/slides/lec11.pdf">slides</a>)
+      Neural Networks (slides)
     </td>
     <td align="center">ISL Ch 10<br>ESL Ch 11</td>
     <td align="center"></td>
@@ -220,7 +220,7 @@
 
   <tr>
     <td>Section</td>
-    <td>Fri<br>Aug 2</td>
+    <td>Fri<br>Aug 1</td>
     <td align="center">
       Final project review
     </td>
@@ -230,9 +230,9 @@
 
   <tr>
     <td align="left">12</td>
-    <td align="left">Mon<br>Aug 5</td>
+    <td align="left">Mon<br>Aug 4</td>
     <td style="text-align:center; vertical-align:middle;">
-      An Introduction to Transformers (<a href="assets/slides/lec12.pdf">slides</a>)
+      An Introduction to Transformers (slides)
     </td>
     <td align="center"><a href="https://arxiv.org/abs/1706.03762">Attention Is All You Need</a></td>
     <td align="center"></td>
@@ -240,9 +240,9 @@
 
   <tr>
     <td>13</td>
-    <td>Wed<br>Aug 7</td>
+    <td>Wed<br>Aug 6</td>
     <td align="center">
-      Survival Analysis (<a href="assets/slides/lec13.pdf">slides</a>)
+      Survival Analysis (slides)
     </td>
     <td align="center">ISL Ch 11</td>
     <td align="center">HW 4 due <b>@ 4:30PM</b></td>
@@ -250,9 +250,9 @@
 
   <tr>
     <td>Section</td>
-    <td>Fri<br>Aug 9</td>
+    <td>Fri<br>Aug 8</td>
     <td align="center">
-      Final exam review (<a href="assets/slides/sec3.pdf">slides</a>)
+      Final exam review (slides)
     </td>
     <td align="center">ESL Ch 11</td>
     <td align="center"><b>Optional:</b> Final report submission</td>
@@ -260,7 +260,7 @@
 
   <tr>
     <td>14</td>
-    <td>Mon<br>Aug 12</td>
+    <td>Mon<br>Aug 11</td>
     <td align="center">
       Final project discussion
     </td>
@@ -270,7 +270,7 @@
 
   <tr>
     <td></td>
-    <td>Wed<br>Aug 14</td>
+    <td>Wed<br>Aug 13</td>
     <td align="center">
       No class
     </td>
@@ -280,10 +280,10 @@
 
   <tr style="text-align:center; vertical-align:middle;background-color:#FFF2F2">
     <td align="left"></td>
-    <td align="left">Sat<br>Aug 17</td>
+    <td align="left">Sat<br>Aug 16</td>
     <td style="text-align:center; vertical-align:middle;">
       <b>FINAL EXAM</b><br>
-      <b>Time</b>: 7:00 PM - 10:00 PM - <b>Location</b>: STLC111.
+      <b>Time</b>: 7:00 PM - 10:00 PM - <b>Location</b>: TBD.
     </td>
     <td align="center"></td>
     <td align="center"></td>
