--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <a href="https://edstem.org/us/courses/79527" style="margin-right:50px">
     <button type="button" class="btn btn-warning btn-lg">ed</button>
   </a>
-  <a href="https://www.gradescope.com/courses/779985" style="margin-right:50px">
+  <a href="https://www.gradescope.com/courses/1049790" style="margin-right:50px">
     <button type="button" class="btn btn-primary btn-lg">Gradescope</button>
   </a>
   <a href="https://calendar.google.com/calendar/embed?src=vc17drtku6o1k0khgpdn3o9d54%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="margin-right:50px">
@@ -69,7 +69,7 @@
     <br>
     <div class="instructor">
       <a href="mailto:etaash@stanford.edu">
-      <div class="instructorphoto"><img src="img/etaash.png"></div>
+      <div class="instructorphoto"><img src="img/etaash.jpg"></div>
       <div>Etaash Katiyar</div>
       <div>(R/Python)</div>
       </a>
@@ -77,9 +77,9 @@
 
     <div class="instructor">
       <a href="mailto:alopotenco@stanford.edu">
-      <div class="instructorphoto"><img src="img/alexandru.jpeg"></div>
+      <div class="instructorphoto"><img src="img/alexandru.jpg"></div>
       <div>Alexandru Lopotenco</div>
-      <div>(R/Python)</div>
+      <div>(Python)</div>
       </a>
     </div>
   </div>
@@ -93,10 +93,8 @@
     <div class="col-md-4">
       <h2>Time & Location</h2>
       <span class="spanh">Summer Quarter</span>: Jun. - Aug. 2025<br>
-      <span class="spanh">Lecture</span>: Monday, Wednesday 4:30 PM - 5:50 PM<br>
-      <span class="spanh">Review</span>: Friday 4:30 PM - 5:50 PM<br>
-      <span class="spanh">Location</span>:
-      <a href="https://campus-map.stanford.edu/?srch=Packard101">Packard 101</a>
+      <span class="spanh">Lecture</span>: Mon, Wed 4:30 PM - 5:50 PM @ <a href="https://campus-map.stanford.edu/?srch=GatesB1">Gates B1</a><br>
+      <span class="spanh">Review</span>: Friday 4:30 PM - 5:20 PM @ <a href="https://campus-map.stanford.edu/?srch=GatesB3">Gates B3</a><br>      
     </div>
     <div class="col-md-4">
         <h2>Office Hours</h2>
@@ -121,7 +119,7 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Course Discussions</h2>
-        We use <a href="https://edstem.org/us/courses/59893">ed</a> for course communication. Any questions regarding course content and course organization should be posted on ed. You are strongly encouraged to answer other students' questions when you know the answer.
+        We use <a href="https://edstem.org/us/courses/79527">ed stem</a> for course communication. Any questions regarding course content and course organization should be posted on ed. You are strongly encouraged to answer other students' questions when you know the answer.
         <br>
       </div>
       <div class="col-md-4">
