Updates midterm location

--- a/syllabus.html
+++ b/syllabus.html
@@ -152,7 +152,7 @@
     <td>Wed<br>Jul 16</td>
     <td style="text-align:center; vertical-align:middle;">
       <b>MIDTERM</b> (practice exam)<br>
-      <b>Time</b>: 4:30 PM to 5:50 PM - <b>Location</b>: Packard 101.
+      <b>Time</b>: 4:30 PM to 5:50 PM - <b>Location</b>: Gates B1.
     </td>
     <td align="center"></td>
     <td align="center"></td>
