Adds finals room details

--- a/syllabus.html
+++ b/syllabus.html
@@ -283,7 +283,7 @@
     <td align="left">Sat<br>Aug 16</td>
     <td style="text-align:center; vertical-align:middle;">
       <b>FINAL EXAM</b><br>
-      <b>Time</b>: 7:00 PM - 10:00 PM - <b>Location</b>: TBD.
+      <b>Time</b>: 7:00 PM - 10:00 PM - <b>Location</b>: <a href="https://campus-map.stanford.edu/?srch=300-300">300-300</a><br>.
     </td>
     <td align="center"></td>
     <td align="center"></td>
