Fixes map search query

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="col-md-4">
       <h2>Time & Location</h2>
       <span class="spanh">Summer Quarter</span>: Jun. - Aug. 2025<br>
-      <span class="spanh">Lecture</span>: Mon, Wed 4:30 PM - 5:50 PM @ <a href="https://campus-map.stanford.edu/?srch=GatesB1">Gates B1</a><br>
-      <span class="spanh">Review</span>: Friday 4:30 PM - 5:20 PM @ <a href="https://campus-map.stanford.edu/?srch=GatesB3">Gates B3</a><br>      
+      <span class="spanh">Lecture</span>: Mon, Wed 4:30 PM - 5:50 PM @ <a href="https://campus-map.stanford.edu/?srch=Gates+B1">Gates B1</a><br>
+      <span class="spanh">Review</span>: Friday 4:30 PM - 5:20 PM @ <a href="https://campus-map.stanford.edu/?srch=Gates+B3">Gates B3</a><br>      
     </div>
     <div class="col-md-4">
         <h2>Office Hours</h2>
