Adds lec2 slides

--- a/syllabus.html
+++ b/syllabus.html
@@ -57,7 +57,7 @@
     <td>2</td>
     <td align="left">Wed<br>Jun 25</td>
     <td style="text-align:center; vertical-align:middle;">
-      Classification & Clustering (slides)
+      Classification & Clustering (<a href="assets/slides/lec2.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 2.2.3, 12.4 <br>ESL Ch 6.6.3</td>
     <td align="center"></td>
