Adds sec1 material

--- a/syllabus.html
+++ b/syllabus.html
@@ -67,7 +67,7 @@
     <td align="left">Section</td>
     <td align="left">Fri<br>Jun 27</td>
     <td style="text-align:center; vertical-align:middle;">
-      Probability, Statistics, and Linear Algebra review (slides)
+      Probability, Statistics, and Linear Algebra review (<a href="assets/slides/sec1.pdf">slides</a>)
     </td>
     <td align="center"></td>
     <td align="center"></td>
