--- a/syllabus.html
+++ b/syllabus.html
@@ -100,7 +100,7 @@
       No class
     </td>
     <td align="center"></td>
-    <td align="center">HW 1 due <b>@ 4:30PM</b><br>HW 2 (Due Jul 14)</td>
+    <td align="center">HW 2 (Due Jul 14)</td>
   </tr>
 
   <tr>
