Adds lec3 slides

--- a/syllabus.html
+++ b/syllabus.html
@@ -77,7 +77,7 @@
     <td>3</td>
     <td>Mon<br>Jun 30</td>
     <td align="center">
-      Linear Regression (slides)
+      Linear Regression (<a href="assets/slides/lec3.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 3<br>ESL Ch 3</td>
     <td align="center"></td>
