--- a/syllabus.html
+++ b/syllabus.html
@@ -87,7 +87,7 @@
     <td>4</td>
     <td>Wed<br>Jul 2</td>
     <td align="center">
-      Finish Linear Regression & Classification (slides)
+      Finish Linear Regression & Classification (<a href="assets/slides/lec4.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 3-4<br>ESL Ch 3</td>
     <td align="center"></td>
