--- a/syllabus.html
+++ b/syllabus.html
@@ -100,7 +100,7 @@
       No class
     </td>
     <td align="center"></td>
-    <td align="center">HW 2 (Due Jul 14)</td>
+    <td align="center"><a href="assets/hw/hw2.pdf">HW 2 (Due Jul 14)</a></td>
   </tr>
 
   <tr>
