--- a/syllabus.html
+++ b/syllabus.html
@@ -107,7 +107,7 @@
     <td>5</td>
     <td align="left">Mon<br>Jul 7</td>
     <td align="center">
-      Evaluation and Uncertainty (slides)
+      Evaluation and Uncertainty (<a href="assets/slides/lec5.pdf">slides</a>)
     </td>
     <td align="center">
       ISL Ch 5<br>ESL Ch 7, 8.8
