--- a/syllabus.html
+++ b/syllabus.html
@@ -120,7 +120,7 @@
     <td>6</td>
     <td>Wed<br>Jul 9</td>
     <td align="center">
-      Model Selection & Regularization (slides)
+      Model Selection & Regularization (<a href="assets/slides/lec6.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 6<br>ESL Ch 18</td>
     <td align="center">
