--- a/syllabus.html
+++ b/syllabus.html
@@ -131,7 +131,7 @@
     <td align="left">Section</td>
     <td align="left">Fri<br>Jul 11</td>
     <td style="text-align:center; vertical-align:middle;">
-      Midterm review (slides)
+      Midterm review (<a href="assets/slides/sec2.pdf">slides</a>)
     </td>
     <td align="center"></td>
     <td align="center"></b></td>
