--- a/syllabus.html
+++ b/syllabus.html
@@ -141,7 +141,7 @@
     <td>7</td>
     <td>Mon<br>Jul 14</td>
     <td align="center">
-      Beyond linearity (slides)
+      Beyond linearity (<a href="assets/slides/lec7.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 6.4-7<br>ESL Ch 5</td>
     <td align="center">HW 2 due <b>@ 4:30PM</b></td>
@@ -151,7 +151,7 @@
     <td></td>
     <td>Wed<br>Jul 16</td>
     <td style="text-align:center; vertical-align:middle;">
-      <b>MIDTERM</b> (practice exam)<br>
+      <b>MIDTERM</b><br>
       <b>Time</b>: 4:30 PM to 5:50 PM - <b>Location</b>: Gates B1.
     </td>
     <td align="center"></td>
