--- a/syllabus.html
+++ b/syllabus.html
@@ -165,7 +165,7 @@
       No class
     </td>
     <td align="center"></td>
-    <td align="center">HW 3 (Due Jul 28)</td>
+    <td align="center"><a href="assets/hw/hw3.pdf">HW 3</a> (Due Jul 28)</td>
   </tr>
 
   <tr>
