--- a/syllabus.html
+++ b/syllabus.html
@@ -172,7 +172,7 @@
     <td>8</td>
     <td>Mon<br>Jul 21</td>
     <td align="center">
-      Support Vector Machines (slides)
+      Support Vector Machines (<a href="assets/slides/lec8.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 9<br>ESL Ch 12.1-12.3</td>
     <td align="center"></td>
