--- a/syllabus.html
+++ b/syllabus.html
@@ -222,7 +222,7 @@
     <td>Section</td>
     <td>Fri<br>Aug 1</td>
     <td align="center">
-      Final project review
+      No class
     </td>
     <td align="center"></td>
     <td align="center"></td>
