--- a/syllabus.html
+++ b/syllabus.html
@@ -182,7 +182,7 @@
     <td>9</td>
     <td>Wed<br>Jul 23</td>
     <td align="center">
-      Decision Trees & Random Forests (slides)
+      Decision Trees & Random Forests (<a href="assets/slides/lec9.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 8<br>ESL Ch 9.2,15</td>
     <td align="center"></td>
