--- a/syllabus.html
+++ b/syllabus.html
@@ -205,7 +205,7 @@
       Boosting (slides)
     </td>
     <td align="center">ISL Ch 8.2<br>ESL Ch 10</td>
-    <td align="center">HW 3 due <b>@ 4:30PM</b><br>HW 4 (Due Aug 6)</td>
+    <td align="center">HW 3 due <b>@ 4:30PM</b><br><a href="assets/hw/hw4.pdf">HW 4</a> (Due Aug 6)</td>
   </tr>
 
   <tr>
