--- a/syllabus.html
+++ b/syllabus.html
@@ -252,7 +252,7 @@
     <td>Section</td>
     <td>Fri<br>Aug 8</td>
     <td align="center">
-      Final exam review (slides)
+      Final project / exam review (slides)
     </td>
     <td align="center">ESL Ch 11</td>
     <td align="center"><b>Optional:</b> Final report submission</td>
