--- a/syllabus.html
+++ b/syllabus.html
@@ -202,7 +202,7 @@
     <td>10</td>
     <td>Mon<br>Jul 28</td>
     <td align="center">
-      Boosting (slides)
+      Boosting (<a href="assets/slides/lec10.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 8.2<br>ESL Ch 10</td>
     <td align="center">HW 3 due <b>@ 4:30PM</b><br><a href="assets/hw/hw4.pdf">HW 4</a> (Due Aug 6)</td>
