--- a/syllabus.html
+++ b/syllabus.html
@@ -212,7 +212,7 @@
     <td>11</td>
     <td>Wed<br>July 30</td>
     <td align="center">
-      Neural Networks (slides)
+      Neural Networks (<a href="assets/slides/lec11.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 10<br>ESL Ch 11</td>
     <td align="center"></td>
