--- a/syllabus.html
+++ b/syllabus.html
@@ -232,7 +232,7 @@
     <td align="left">12</td>
     <td align="left">Mon<br>Aug 4</td>
     <td style="text-align:center; vertical-align:middle;">
-      An Introduction to Transformers (slides)
+      An Introduction to Transformers (<a href="assets/slides/lec12.pdf">slides</a>)
     </td>
     <td align="center"><a href="https://arxiv.org/abs/1706.03762">Attention Is All You Need</a></td>
     <td align="center"></td>
