--- a/syllabus.html
+++ b/syllabus.html
@@ -242,7 +242,7 @@
     <td>13</td>
     <td>Wed<br>Aug 6</td>
     <td align="center">
-      Survival Analysis (slides)
+      Survival Analysis (<a href="assets/slides/lec13.pdf">slides</a>)
     </td>
     <td align="center">ISL Ch 11</td>
     <td align="center">HW 4 due <b>@ 4:30PM</b></td>
